# boilerplate

./: README.md  config_defaults.env  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/application/: settings.py
backend/utils/management/commands/: init_s3.py
frontend/: Dockerfile  next.config.js  package.json
frontend/pages/: index.js
frontend/public/: manifest.json  sw.js.map
nginx/conf/: app.conf.template
