[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["anonymous"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
psycopg2 = "^2.9.3"
django-redis = "^5.2.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.5"
Pillow = "^9.0.1"
django-storages = "^1.12.3"
boto3 = "^1.21.4"
django-extensions = "^3.1.5"
jupyter = "^1.0.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
